--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
     "@tailwindcss/vite": "^4.1.8",
     "framer-motion": "^12.15.0",
     "react": "^19.1.0",
